package edu.fiuba.algo3.modelo;

public interface Jokeable {
    public boolean equalHand(Hand hand);
}
