package edu.fiuba.algo3.modelo;

public interface JokerStrategy {
    public void apply(Score score);
}
